--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,4 +3,20 @@ version: 0.1.{build}
 configuration: Release
 
 before_build:
-    - nuget restore
+  - nuget restore
+
+artifacts:
+  - path: SqlServerHelpers\bin\Release\SqlServerHelpers.dll
+    name: SqlServerHelpers.dll
+  - path: '**\SqlServerHelpers*.nupkg'
+
+# PowerShell script to deploy to NuGet (runs after any unit tests, if they pass)
+after_test:
+  - ps: .\NuGet\pack.ps1
+
+# Publish to NuGet
+deploy:
+  provider: NuGet
+  api_key:
+    secure: fy1qFrz8kHfWX2AnOMd2BuzLgDb2MMTj2JrryhAe4n84l2smPM4ohi9NRZZ0MAig
+artifact: /.*\.nupkg/
