--- a/NuGet/SqlServerHelpers.nuspec
+++ b/NuGet/SqlServerHelpers.nuspec
@@ -15,4 +15,7 @@
       <dependency id="EntityFramework" version="6.1.3" />
     </dependencies>
   </metadata>
+  <files>
+	<file src="..\SqlServerHelpers\bin\Release\SqlServerHelpers.dll" target="lib" />
+  </files>
 </package>
