apveyor SQL Server for Unit Test

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,6 +4,9 @@ configuration: Release
 
 before_build:
   - nuget restore
+ 
+services:
+  - mssql2016
 
 artifacts:
   - path: SqlServerHelpers\bin\Release\SqlServerHelpers.dll
