--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -53,6 +53,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Constants.cs" />
+    <Compile Include="EnumerableParameterTests.cs" />
     <Compile Include="Regression\Bug1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
