--- a/UnitTests/App.config
+++ b/UnitTests/App.config
@@ -3,6 +3,6 @@
   <connectionStrings>
     <clear />
 
-    <add name="db" providerName="System.Data.SqlServer" connectionString="Server=.\SQLEXPRESS; Database=SqlServerHelpers; User ID=SqlServerHelpersUser; pwd=wow_much_security" />
+    <add name="db" providerName="System.Data.SqlServer" connectionString="Server=sqlserver; Database=SqlServerHelpers; User ID=SqlServerHelpersUser; pwd=wow_much_security" />
   </connectionStrings>
 </configuration>
