--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -56,6 +56,7 @@
     <Compile Include="EnumerableParameterTests.cs" />
     <Compile Include="Regression\Bug1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SetUpTearDown.cs" />
     <Compile Include="TimeConversionTests.cs" />
     <Compile Include="TimeSpanTests.cs" />
   </ItemGroup>
